# Sparse-Localized-Deformation-Components-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
cmakes/: pcl.cmake
examples/face-poses/: face-01-anger.ply  face-02-cry.ply  face-03-fury.ply  face-04-grin.ply  face-05-laugh.ply  face-06-rage.ply  face-07-sad.ply  face-08-smile.ply  face-09-surprise.ply  face-reference.ply
examples/face205_ply/faceplys/: face205.msq  face_mesh_000309.ply  face_mesh_000312.ply  face_mesh_000315.ply  face_mesh_000318.ply  face_mesh_000321.ply  face_mesh_000324.ply  face_mesh_000327.ply  face_mesh_000330.ply  face_mesh_000333.ply  face_mesh_000336.ply  face_mesh_000339.ply  face_mesh_000342.ply  face_mesh_000345.ply  face_mesh_000348.ply  face_mesh_000351.ply  face_mesh_000354.ply  face_mesh_000357.ply  face_mesh_000360.ply  face_mesh_000363.ply  face_mesh_000366.ply  face_mesh_000369.ply  face_mesh_000372.ply  face_mesh_000375.ply  face_mesh_000378.ply  face_mesh_000381.ply  face_mesh_000384.ply  face_mesh_000387.ply  face_mesh_000390.ply  face_mesh_000393.ply  face_mesh_000396.ply  face_mesh_000399.ply  face_mesh_000402.ply  face_mesh_000405.ply  face_mesh_000408.ply  face_mesh_000411.ply  face_mesh_000414.ply  face_mesh_000417.ply  face_mesh_000420.ply  face_mesh_000423.ply  (+344 more)
src/: awesome_header.h  splocs.cpp  splocs.h
tests/: CMakeLists.txt  eigen_test.cpp  face_test.cpp  face_test2.cpp  test1.cpp
